<resources>
    <string name="app_name">Androgreen Studwood</string>
    <string name="apropos">A Propos</string>
    <string name="qcm">QCM</string>
    <string name="Region">Region</string>
    <string name="home">Menu</string>
    <string name="texte">Bienvenue sur l\'application qui permet d\'indiquer votre emission de polution</string>
    <string name="retour">Retour</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="transport">Transport en commun</string>
    <string name="voiture">Voiture</string>
    <string name="pied">Velo/Pied</string>
    <string name="quelleTransport">Quelle transport utilisez-vous pour aller au travail ?</string>
    <string name="consommation">Quelle est votre distance parcouru entre 2 pleins ?</string>
    <string name="litre">Combien de litre de carburant à besoin votre voiture pour faire le plein ?</string>
    <string name="valider">Valider</string>
    <string name="consoSup">Votre consommation de carburant est de : </string>
    <string name="litre100km"> litre/100km </string>
    <string name="emission">Soit une émission de:</string>
    <string name="g">g de CO2</string>
    <string name="felicitation">Félicitation votre consommation de carburant est de 0 ou vous faites le plus d\'effort possible pour eviter de consmmation et la planète vous remercie</string>
    <string name="emissionRegion"> L\' émission de cette région est de : </string>
    <string name="rang">Le rang de de la région est de : </string>
    <string name="laprois_valentin">LAPROIS Valentin</string>
    <string name="delmote_adrien">DELMOTE Adrien</string>
    <string name="Text_A_Propos">En tant qu\'étudiant en informatique, nous nous sommes mis en quête de creer une application mobile pour sensibiliser la population quant à leur consomation de carburant et quel impact ca a sur notre magnifique planete</string>
    <string name="enCO">En co2 pat habitant</string>
    <string name="manque"> il manque des informations</string>
    <string name="ok"> ok </string>
    <string name="langue">Langue</string>
    <string name="choisirlangue">Choisissez une langue :</string>
    <string name="Dejasurregion">Vous êtes deja sur la page "Region"</string>
    <string name="Dejasurapropos">Vous êtes deja sur la page "A propos"</string>
    <string name="Dejasurmenu">Vous êtes deja sur la page "Menu"</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="voici_la_liste_des_r_gions">voici la liste des régions</string>
    <string name="DejasurQCM">Vous etes déja sur le questionnaire</string>
</resources>