<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QCM">

    <Button
        android:id="@+id/retourQCM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="35dp"
        android:text="@string/retour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupe"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nomlayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nom" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prenomlayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomlayout"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prenom" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/groupe"
        android:layout_width="311dp"
        android:layout_height="182dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenomlayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="333dp"
            android:layout_height="49dp"
            android:text="@string/quelleTransport"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/veloPied"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pied" />

        <RadioButton
            android:id="@+id/transport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transport" />

        <RadioButton
            android:id="@+id/voiture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voiture" />
    </RadioGroup>

    <TextView
        android:id="@+id/conso"
        android:layout_width="369dp"
        android:layout_height="18dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/consommation"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/consolayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupe"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/litrelayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/retourQCM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consolayout"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/litre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/questionlitre"
        android:layout_width="367dp"
        android:layout_height="34dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/litre"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/litrelayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consolayout"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/consolayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/retourQCM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupe"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/questionconso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="35dp"
        android:text="@string/valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/retourQCM"
        app:layout_constraintTop_toTopOf="@+id/nomlayout"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/enregistrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/enregister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/valider"
        app:layout_constraintStart_toEndOf="@+id/retourQCM"
        app:layout_constraintTop_toBottomOf="@+id/litrelayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>